--- a/example/build.gradle
+++ b/example/build.gradle
@@ -20,16 +20,17 @@ android {
 }
 
 dependencies {
-    testCompile deps.junit
-    androidTestCompile(deps.testRunner) {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-    androidTestCompile(deps.testEspresso) {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
+    compile project(':collapsingtoolbarlayout-subtitle')
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-    compile project(':collapsingtoolbarlayout-subtitle')
+    androidTestCompile(deps.supportTestRunner) {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile(deps.supportTestEspresso) {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
+    testCompile deps.junit
 }
