updated LICENSE, README, and example

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DefaultActivity"
-            android:theme="@style/ArticleTheme"/>
-        <activity
-            android:name=".SubtitleActivity"
+            android:name=".ArticleActivity"
             android:theme="@style/ArticleTheme"/>
     </application>
 
