--- a/example/build.gradle
+++ b/example/build.gradle
@@ -7,7 +7,7 @@ android {
         applicationId 'com.example.collapsingtoolbarlayoutsubtitle'
         versionCode 1
         versionName '1.0'
-        minSdkVersion config.sdk.min
+        minSdkVersion 13
         targetSdkVersion config.sdk.target
         testInstrumentationRunner config.testRunner
     }
@@ -21,8 +21,11 @@ android {
 
 dependencies {
     compile project(':collapsingtoolbarlayout-subtitle')
-
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+    compile 'com.hendraanggrian:bundler:0.3.0'
     compile 'com.jakewharton:butterknife:8.5.1'
+
+    annotationProcessor 'com.hendraanggrian:bundler-compiler:0.3.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     androidTestCompile(deps.supportTestRunner) {
