--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
@@ -11,6 +11,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://dl.bintray.com/hendraanggrian/maven' }
     }
 }
 
@@ -34,13 +35,15 @@ ext.deps = [
         supportDesign      : 'com.android.support:design:25.3.1',
         supportTestRunner  : 'com.android.support.test:runner:0.5',
         supportTestEspresso: 'com.android.support.test.espresso:espresso-core:2.2.2',
+        // util
+        utilContent        : 'com.hendraanggrian:compat-content:0.1'
 ]
 
 ext.bintray = [
         user    : 'hendraanggrian',
         group   : 'com.hendraanggrian',
         artifact: 'collapsingtoolbarlayout-subtitle',
-        version : '0.4.6',
+        version : '0.5.0',
         desc    : 'Standard CollapsingToolbarLayout with subtitle support.',
         website : 'https://github.com/HendraAnggrian/collapsingtoolbarlayout-subtitle'
 ]
