--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -1,13 +1,14 @@
-apply plugin: plugin.android.lib
-apply plugin: plugin.novoda
+apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
 android {
-    compileSdkVersion config.sdk.target
-    buildToolsVersion config.buildTools
+    compileSdkVersion versions.sdk.target
+    buildToolsVersion versions.buildTools
     defaultConfig {
-        minSdkVersion config.sdk.min
-        targetSdkVersion config.sdk.target
-        testInstrumentationRunner config.testRunner
+        minSdkVersion versions.sdk.min
+        targetSdkVersion versions.sdk.target
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     sourceSets {
         main.manifest.srcFile 'AndroidManifest.xml'
@@ -18,15 +19,15 @@ android {
 }
 
 dependencies {
-    compile deps.support.design
-    compile deps.hendraanggrian.utils
+    compile "com.android.support:design:$versions.support"
+    compile "com.hendraanggrian:support-utils:$versions.utils"
 }
 
 publish {
     userOrg = bintray.user
     groupId = bintray.group
-    artifactId = bintray.artifact
-    publishVersion = bintray.version
-    desc = bintray.desc
-    website = bintray.website
+    artifactId = bintray.artifact.collapsingtoolbarlayout_subtitle.id
+    publishVersion = versions.release
+    desc = bintray.artifact.collapsingtoolbarlayout_subtitle.desc
+    website = bintray.artifact.collapsingtoolbarlayout_subtitle.website
 }
