--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,17 +1,33 @@
-apply plugin: plugin.android.app
-apply plugin: plugin.kotlin.android
-apply plugin: plugin.kotlin.kapt
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
+buildscript {
+    ext.kotlin = '1.1.2-3'
+    ext.materialdialogs = '0.9.4.5'
+    ext.butterknife = '8.6.0'
+    ext.bundler = '0.4.1'
+    ext.runner = '0.5'
+    ext.espresso = '2.2.2'
+    ext.junit = '4.12'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
+    }
+}
 
 android {
-    compileSdkVersion config.sdk.target
-    buildToolsVersion config.buildTools
+    compileSdkVersion versions.sdk.target
+    buildToolsVersion versions.buildTools
     defaultConfig {
         applicationId 'com.example.collapsingtoolbarlayoutsubtitle'
         versionCode 1
         versionName '1.0'
         minSdkVersion 13
-        targetSdkVersion config.sdk.target
-        testInstrumentationRunner config.testRunner
+        targetSdkVersion versions.sdk.target
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         debug {
@@ -23,20 +39,21 @@ android {
 
 dependencies {
     compile project(':collapsingtoolbarlayout-subtitle')
-    compile deps.kotlin
-    compile deps.materialdialogs
-    compile deps.hendraanggrian.bundler.main
-    compile deps.butterknife.main
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
+    compile "com.afollestad.material-dialogs:core:$materialdialogs"
 
-    kapt deps.hendraanggrian.bundler.processor
-    kapt deps.butterknife.processor
+    compile "com.jakewharton:butterknife:$butterknife"
+    kapt "com.jakewharton:butterknife-compiler:$butterknife"
 
-    androidTestCompile(deps.support.test.runner) {
+    compile "com.hendraanggrian:bundler:$bundler"
+    kapt "com.hendraanggrian:bundler-compiler:$bundler"
+
+    androidTestCompile("com.android.support.test:runner:$runner") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestCompile(deps.support.test.espresso) {
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
-    testCompile deps.junit
+    testCompile "junit:junit:$junit"
 }
