--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
@@ -18,13 +18,18 @@ allprojects {
             buildTools: '25.0.3',
 
             // main
-            support   : '25.3.1',
-            utils     : '0.7',
+            support   : '25.4.0',
+            utils     : '0.12',
 
-            release   : '0.5.2'
+            release   : '0.6.0'
     ]
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
+    }
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
     }
 }
 
