--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -8,18 +8,34 @@ android {
     defaultConfig {
         minSdkVersion versions.sdk.min
         targetSdkVersion versions.sdk.target
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     sourceSets {
         main.manifest.srcFile 'AndroidManifest.xml'
         main.java.srcDirs 'src'
-        main.res.srcDirs = ['res', 'res-public']
+        main.res.srcDirs 'res', 'res-public'
         main.resources.srcDir 'src'
+        androidTest.setRoot('tests')
+        androidTest.manifest.srcFile 'tests/AndroidManifest.xml'
+        androidTest.java.srcDir 'tests/src'
+        androidTest.res.srcDir 'tests/res'
+        androidTest.resources.srcDir 'tests/src'
     }
 }
 
 dependencies {
     compile "com.android.support:design:$versions.support"
     compile "com.hendraanggrian:support-utils:$versions.utils"
+    androidTestCompile("com.android.support.test:rules:$versions.rules") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile("com.android.support.test:runner:$versions.runner") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$versions.espresso") {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    testCompile "junit:junit:$versions.junit"
 }
 
 publish {
