--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 buildscript {
-    ext.kotlin = '1.1.3'
+    ext.kotlin = '1.1.3-2'
     ext.materialdialogs = '0.9.4.5'
     repositories {
         mavenCentral()
