--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     compile "com.android.support:design:$versions.support"
-    compile "com.hendraanggrian:support-utils:$versions.utils"
+    compile "com.hendraanggrian:kota:$versions.kota"
+    androidTestCompile "com.hendraanggrian:errorview:$versions.errorview"
     androidTestCompile("com.android.support.test:rules:$versions.rules") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
