--- a/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:targetSdkVersion="25"
         tools:overrideLibrary="android.support.test, android.app, android.support.test.rule, android.support.test.espresso, android.support.test.espresso.idling"/>
 
-    <application
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    <application android:theme="@style/AppTheme">
         <uses-library android:name="android.test.runner"/>
         <activity android:name=".InstrumentedActivity"/>
     </application>
