--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -17,6 +17,7 @@ android {
         main.resources.srcDir 'src'
         androidTest.setRoot('tests')
         androidTest.manifest.srcFile 'tests/AndroidManifest.xml'
+        androidTest.assets.srcDir 'tests/assets'
         androidTest.java.srcDir 'tests/src'
         androidTest.res.srcDir 'tests/res'
         androidTest.resources.srcDir 'tests/src'
