rewritten codebase to Kotlin
preparing for support version 26.0.0

--- a/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
@@ -11,6 +11,6 @@
 
     <application android:theme="@style/AppTheme">
         <uses-library android:name="android.test.runner"/>
-        <activity android:name=".InstrumentedActivity"/>
+        <activity android:name=".activity.InstrumentedActivity"/>
     </application>
 </manifest>
