--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,40 @@
 buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.novoda:bintray-release:0.5.0'
-    }
-}
-
-allprojects {
     ext.versions = [
             // android
             sdk       : [
-                    min   : 9,
-                    target: 25,
+                    min   : 14,
+                    target: 26,
             ],
             buildTools: '26.0.0',
 
             // main
+            kotlin    : [
+                    stdlib: '1.1.3-2',
+                    anko  : '0.10.1'
+            ],
             support   : '25.4.0',
-            kota      : '0.1.4',
+            kota      : '0.2.2',
 
             // test
-            errorview : '0.8.1',
+            errorbar  : '0.2.0',
             ruler     : '0.5',
             runner    : '0.5',
             espresso  : '2.2.2',
             junit     : '4.12',
 
-            release   : '0.7.0'
+            release   : '0.8.0'
     ]
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin.stdlib"
+        classpath 'com.novoda:bintray-release:0.5.0'
+    }
+}
+
+allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
