--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.novoda.bintray-release'
 apply from: 'https://raw.githubusercontent.com/HendraAnggrian/hendraanggrian.github.io/master/bintray.gradle'
 
@@ -25,9 +26,14 @@ android {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin.main"
     compile "com.android.support:design:$versions.support"
-    compile "com.hendraanggrian:kota:$versions.kota"
-    androidTestCompile "com.hendraanggrian:errorview:$versions.errorview"
+    compile("com.hendraanggrian:kota:$versions.kota") {
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
+    androidTestCompile("com.hendraanggrian:errorbar:$versions.errorbar") {
+        transitive = false
+    }
     androidTestCompile("com.android.support.test:rules:$versions.rules") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
