--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,14 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 buildscript {
-    ext.kotlin = '1.1.3-2'
     ext.materialdialogs = '0.9.4.5'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
-    }
 }
 
 android {
@@ -20,7 +13,7 @@ android {
         applicationId 'com.example.collapsingtoolbarlayoutsubtitle'
         versionCode 1
         versionName '1.0'
-        minSdkVersion 13
+        minSdkVersion versions.sdk.min
         targetSdkVersion versions.sdk.target
     }
     sourceSets {
@@ -31,7 +24,7 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
@@ -42,9 +35,9 @@ android {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin.main"
     compile project(':collapsingtoolbarlayout-subtitle')
     compile "com.android.support:appcompat-v7:$versions.support"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin"
     compile("com.afollestad.material-dialogs:core:$materialdialogs") {
         exclude group: 'com.android.support'
     }
