--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,39 @@
 buildscript {
     ext.versions = [
+            release   : '0.8.0',
             // android
             sdk       : [
                     min   : 14,
                     target: 26,
             ],
-            buildTools: '26.0.0',
-
+            buildTools: '26.0.2',
             // main
-            kotlin    : [
-                    stdlib: '1.1.3-2',
-                    anko  : '0.10.1'
-            ],
-            support   : '26.0.0',
-            kota      : '0.5.0',
-
+            kotlin    : '1.1.51',
+            support   : '26.1.0',
             // test
             errorbar  : '0.3.0',
             ruler     : '0.5',
             runner    : '0.5',
             espresso  : '2.2.2',
-            junit     : '4.12',
-
-            release   : '0.8.0'
+            junit     : '4.12'
     ]
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin.stdlib"
+        classpath 'com.android.tools.build:gradle:3.0.0-beta7'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         classpath 'com.novoda:bintray-release:0.5.0'
     }
 }
 
 allprojects {
     repositories {
-        maven { url 'https://maven.google.com' }
+        google()
         jcenter()
     }
     tasks.withType(Javadoc) {
-        excludes = ['**/*.kt']
+        enabled = false
     }
 }
 
