--- a/collapsingtoolbarlayout-subtitle/build.gradle
+++ b/collapsingtoolbarlayout-subtitle/build.gradle
@@ -12,23 +12,26 @@ android {
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     sourceSets {
-        main.manifest.srcFile 'AndroidManifest.xml'
-        main.java.srcDirs 'src'
-        main.res.srcDirs 'res', 'res-public'
-        main.resources.srcDir 'src'
-        androidTest.setRoot('tests')
-        androidTest.manifest.srcFile 'tests/AndroidManifest.xml'
-        androidTest.assets.srcDir 'tests/assets'
-        androidTest.java.srcDir 'tests/src'
-        androidTest.res.srcDir 'tests/res'
-        androidTest.resources.srcDir 'tests/src'
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs 'src'
+            res.srcDirs 'res', 'res-public'
+            resources.srcDir 'src'
+        }
+        androidTest {
+            setRoot('tests')
+            manifest.srcFile 'tests/AndroidManifest.xml'
+            assets.srcDir 'tests/assets'
+            java.srcDir 'tests/src'
+            res.srcDir 'tests/res'
+            resources.srcDir 'tests/src'
+        }
     }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin.main"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
     compile "com.android.support:design:$versions.support"
-    compile "com.hendraanggrian:kota:$versions.kota"
     androidTestCompile "com.hendraanggrian:errorbar:$versions.errorbar"
     androidTestCompile("com.android.support.test:rules:$versions.rules") {
         exclude group: 'com.android.support', module: 'support-annotations'
