--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext.versions = [
-            release   : '0.8.0',
             // android
             sdk       : [
                     min   : 14,
@@ -18,6 +17,7 @@ buildscript {
             junit     : '4.12'
     ]
     repositories {
+        google()
         jcenter()
     }
     dependencies {
@@ -41,4 +41,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-//$ ./gradlew bintrayUpload -PbintrayUser=hendraanggrian -PbintrayKey= -PdryRun=false
+/**
+ ./gradlew :collapsingtoolbarlayout-subtitle:clean :collapsingtoolbarlayout-subtitle:build
+ ./gradlew :collapsingtoolbarlayout-subtitle:bintrayUpload -PbintrayUser=hendraanggrian -PdryRun=false -PbintrayKey=
+ */
