--- a/example/build.gradle
+++ b/example/build.gradle
@@ -35,8 +35,14 @@ android {
 dependencies {
     compile project(':collapsingtoolbarlayout-subtitle')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
-    compile 'com.hendraanggrian:kota:0.8.0'
+
+    compile 'com.hendraanggrian:kota:0.12'
+    compile 'com.hendraanggrian:kota-design:0.12'
+    compile 'com.hendraanggrian:kota-appcompat-v7:0.12'
+
+    compile "com.android.support:design:$versions.support"
     compile "com.android.support:appcompat-v7:$versions.support"
+
     compile('com.afollestad.material-dialogs:core:0.9.4.5') {
         exclude group: 'com.android.support'
     }
