--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,25 @@
-# Project-wide Gradle settings.
+# bintray
+bintray_user=hendraanggrian
+bintray_group=com.hendraanggrian
+bintray_artifact=collapsingtoolbarlayout-subtitle
+bintray_desc=Standard CollapsingToolbarLayout with subtitle support
+bintray_web=https://github.com/hendraanggrian/collapsingtoolbarlayout-subtitle
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+# android
+sdk_min=14
+sdk_target=27
+build_tools=26.0.2
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+# dependencies
+kotlin=1.1.60
+support=27.0.1
+errorbar=0.3.0
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
+# test
+junit=4.12
+truth=0.36
+runner=1.0.1
+espresso=3.0.1
+
+# jvm
 org.gradle.jvmargs=-Xmx1536m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
