--- a/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.hendraanggrian.collapsingtoolbarlayout.subtitle.test"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.hendraanggrian.collapsingtoolbarlayout.subtitle.test">
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="25"
-        tools:overrideLibrary="android.support.test, android.app, android.support.test.rule, android.support.test.espresso, android.support.test.espresso.idling"/>
+        tools:overrideLibrary="android.support.test, android.app, android.support.test.rule, android.support.test.espresso, android.support.test.espresso.idling" />
 
     <application android:theme="@style/AppTheme">
-        <uses-library android:name="android.test.runner"/>
-        <activity android:name=".activity.InstrumentedActivity"/>
+        <uses-library android:name="android.test.runner" />
+        <activity android:name=".activity.InstrumentedActivity" />
     </application>
 </manifest>
