--- a/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
+++ b/collapsingtoolbarlayout-subtitle/tests/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.hendraanggrian.collapsingtoolbarlayout.subtitle.test">
+    package="com.hendraanggrian.collapsingtoolbarlayout.subtitle">
 
     <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="25"
+        android:minSdkVersion="14"
+        android:targetSdkVersion="27"
         tools:overrideLibrary="android.support.test, android.app, android.support.test.rule, android.support.test.espresso, android.support.test.espresso.idling" />
 
     <application android:theme="@style/AppTheme">
