--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,20 @@ android:
     # Specify at least one system image, if you need to run emulator(s) during your tests
     #- sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-27
+
+ before_install:
+ - mkdir "$ANDROID_HOME/licenses" || true
+ - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" >
+ "$ANDROID_HOME/licenses/android-sdk-license"
+ - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+ - chmod +x gradlew
+ - ./gradlew dependencies || true
+
+before_script:
+- echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
+
+script:
+- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
