--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,26 @@
 language: android
 
-sudo: required
-
 jdk: oraclejdk8
-
-before_cache:
- -rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
- -rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
- directories:
- -$HOME/.gradle/caches/
- -$HOME/.gradle/wrapper/
 
 env:
  global:
- - ANDROID_API=27
- - EMULATOR_API=27
- - ANDROID_BUILD_TOOLS=27.0.3
- - ADB_INSTALL_TIMEOUT=5 # minutes
+  - ANDROID_TARGET=android-27
+  - ANDROID_ABI=x86
 
 android:
   components:
-    - tools
-    - platform-tools
-    - build-tools-27.0.3
-    - android-27
-    - extra-android-support
-    - extra-android-m2repository
-    - extra-google-m2repository
-
-    # Additional components
-    #- extra-google-google_play_services
-    #- addon-google_apis-google-19
-
-    # Specify at least one system image, if you need to run emulator(s) during your tests
-    #- sys-img-armeabi-v7a-android-19
-    - sys-img-x86-android-27
-
- before_install:
- - mkdir "$ANDROID_HOME/licenses" || true
- - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" >
- "$ANDROID_HOME/licenses/android-sdk-license"
- - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
- - chmod +x gradlew
- - ./gradlew dependencies || true
-
-before_script:
-- echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 &
+  - tools
+  - platform-tools
+  - build-tools-27.0.3
+  - android-27
+  - extra-android-m2repository
+  - extra-google-m2repository
+  - sys-img-x86-android-27
 
 script:
-- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+  - android list targets
+  - echo no | android create avd --force -n test -t android-23 --abi x86 -no-accel
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+  - ./gradlew installDebug
