--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,29 @@ language: android
 jdk: oraclejdk8
 
 env:
- global:
-  - ANDROID_TARGET=android-27
-  - ANDROID_ABI=x86
+  global:
+   - ANDROID_TARGET=android-27
+   - ANDROID_ABI=x86
 
 android:
   components:
-  - tools
-  - platform-tools
-  - build-tools-27.0.3
-  - android-27
-  - extra-android-m2repository
-  - extra-google-m2repository
-  - sys-img-x86-android-27
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    - tools
+    - platform-tools
 
-script:
-  - android list targets
-  - echo no | android create avd --force -n test -t android-23 --abi x86 -no-accel
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew installDebug
+    # The BuildTools version used by your project
+    - build-tools-27.0.3
+
+    # The SDK version used to compile your project
+    - android-27
+
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-27
+
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-x86-android-27
