--- a/.travis.yml
+++ b/.travis.yml
@@ -9,23 +9,17 @@ env:
 
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - tools
-    - platform-tools
-
-    # The BuildTools version used by your project
-    - build-tools-27.0.3
-
-    # The SDK version used to compile your project
-    - android-27
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-27
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-27
+  - tools
+  - platform-tools
+  - build-tools-27.0.3
+  - android-27
+  - extra-android-m2repository
+  - extra-google-m2repository
+  - sys-img-x86-android-27
+script:
+  - android list targets
+  - echo no | android create avd --force -n test -t android-27 --abi x86 -no-accel
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+  - ./gradlew installDebug
