--- a/.travis.yml
+++ b/.travis.yml
@@ -4,24 +4,17 @@ jdk: oraclejdk8
 
 env:
   global:
-    - ANDROID_TARGET=android-27
-    - ANDROID_ABI=x86
+    - ANDROID_API_LEVEL=27
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+    - ANDROID_ABI=google_apis/armeabi-v7a
     
 android:
   components:
-    - tools
     - platform-tools
-    - build-tools-27.0.3
-    - android-27
-    - extra-android-m2repository
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - extra-android-support
     - extra-google-m2repository
-    - sys-img-x86-android-27
-
-before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi x86
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-  
-script:
-  - ./gradlew connectedAndroidTest
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
