--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    
+before_install:
+    - chmod +x gradlew
