--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,13 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    
-before_install:
-    - chmod +x gradlew
+
+before_script:
+  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
