Travis config from https://github.com/travis-ci/travis-ci/issues/6550

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,29 +2,44 @@ language: android
 
 jdk: oraclejdk8
 
-env:
-  global:
-    - ANDROID_API_LEVEL=27
-    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-    - ANDROID_ABI=google_apis/armeabi-v7a
-    
+sudo: false
+
 android:
-  components:
-    - platform-tools
-    - tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - extra-android-support
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    components:
+        - platform-tools
+        - tools
+        - extra-android-support
+        - extra-android-m2repository
+        - extra-google-m2repository
+        - extra-google-google_play_services
+        - build-tools-27.0.3
+        - android-27
+        - sys-img-armeabi-v7a-android-27
+    licenses:
+        - '.+'
+        - android-sdk-license-.+
+        - google-gdk-license-.+
+
+before_install:
+    - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+    - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 
 script:
-  - android list target
-  - ./gradlew connectedAndroidTest
+    - ./gradlew connectedCheck --stacktrace
+
+notifications:
+    on_success: change
+    on_failure: never
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
